fix: allow overriding docker default